--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-router-dom": "^6.10.0",
