--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://Abdelrahman0122.github.io/e-commerce-app",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.4.0",  
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
